Se agrega nuevas imagenes

--- a/Portafolios/Album_Puerto_Morelos.html
+++ b/Portafolios/Album_Puerto_Morelos.html
@@ -127,18 +127,14 @@
 
 <footer>
   <section class="text-center mb-2">
-    <a href="https://www.facebook.com/assemblyphoto/">
-      <img src="../Imagenes/Iconos/fb.svg" alt="" href="">
-    </a>
+    <a href="https://www.facebook.com/assemblyphoto/"><img src="../Imagenes/Iconos/fb.svg" alt=""></a>
     
-    <a href="https://www.instagram.com/assemblyphoto/">
-      <img src="../Imagenes/Iconos/instagram.svg" alt="">
-    </a>
+    <a href="https://www.instagram.com/assemblyphoto/"><img src="../Imagenes/Iconos/instagram.svg" alt=""></a>
    
   </section>
   <div>
     <h10>
-      AssemblyPhoto - Ed Bernal © 2022 Copyright
+      AssemblyPhoto - Ed Bernal © 2022 Copyright.
     </h10>
     
   </div>
