Se comprimen las imagenes

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
                     <li><a class="dropdown-item" href="../Portafolios/Album_Retratos.html">Retratos</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item" href="../Portafolios/Album_Puerto_Morelos.html">Puerto Morelos</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item" href="../Portafolios/Album_Escolar.html">Escolar</a></li>
                   </ul>
                 </li>
                         
